Clean CMakeLists.txt

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,7 +2,7 @@
 #
 #  Verify that Cmake is up to date
 #
-CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
+CMAKE_MINIMUM_REQUIRED(VERSION 3.12)
 #SET(CMAKE_LEGACY_CYGWIN_WIN32 0)
 
 
@@ -24,34 +24,32 @@ LIST(APPEND CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/cmake/modules)
 # Try using the PCH - it will only work if you have the right version of cmake
 #
 option(USING_PCH "Build using pre-compiled header support" ON)
+option(WITH_OPENMP "Use OpenMP for parallelization" ON)
+
+
+#
+#  OpenMP
+#
+if(WITH_OPENMP)
+  find_package(OpenMP REQUIRED)
+endif()
 
 
 #
 #  Python library
 #
-MESSAGE("Looking for Python libraries...")
-MESSAGE("Advice: If this search fails, try setting cache variables: -DPYTHON_LIBRARY=\${path_to_the_python_library} -DPYTHON_INCLUDE_DIR=\${path_to_where_Python.h_is_found}")
-MESSAGE("Hint to self: -DPYTHON_INCLUDE_DIR=/home/Alexey_2/Soft/Python-2.6.7/bin/include/python2.6 -DPYTHON_LIBRARY=/home/Alexey_2/Soft/Python-2.6.7/bin/bin")
+MESSAGE(STATUS "Looking for Python libraries...")
+FIND_PACKAGE(Python3 3.6 REQUIRED COMPONENTS Interpreter Development)
 
-# For Linux and Cygwin
-# Adapt it according to your system
-#FIND_PACKAGE(PythonLibs 3.6 REQUIRED)
-FIND_PACKAGE(PythonLibs 3.9 REQUIRED)
-#FIND_PACKAGE(PythonLibs 3.7 REQUIRED)
-
-IF(PYTHONLIBS_FOUND)
-  MESSAGE("Success!")
-  INCLUDE_DIRECTORIES("${PYTHON_INCLUDE_DIRS}")
-ELSEIF(NOT PYTHONLIBS_FOUND)
-  MESSAGE("Unable to find correct Python version. If your Python include/libraries are installed in a non-standard location")
-  MESSAGE("Try using -DPYTHON_LIBRARY=\${path_to_the_python_library} -PYTHON_INCLUDE_DIR=\${path_to_where_Python.h_is_found}")
+IF(NOT Python3_FOUND)
+  MESSAGE(STATUS "Unable to find correct Python version. If your Python include/libraries are installed in a non-standard location")
+  MESSAGE(STATUS "Try using -DPython3_ROOT_DIR=\${path_to_the_python_root_dir}")
   MESSAGE(FATAL_ERROR)
 ENDIF()
 
-MESSAGE("Found  Python libraries directory: ")
-MESSAGE(${PYTHON_LIBRARIES})
-MESSAGE("Found Python include directory: ")
-MESSAGE(${PYTHON_INCLUDE_DIRS})
+MESSAGE(STATUS "Found Python libraries directory: ${Python3_LIBRARIES}")
+MESSAGE(STATUS "Found Python include directory:   ${Python3_INCLUDE_DIRS}")
+SET(LIBRA_Python3_VERSION "${Python3_VERSION_MAJOR}${Python3_VERSION_MINOR}")
 
 
 
@@ -60,66 +58,36 @@ MESSAGE(${PYTHON_INCLUDE_DIRS})
 #  Boost library
 #
 
-MESSAGE("Looking for Boost libraries...")
+MESSAGE(STATUS "Looking for Boost libraries...")
 SET(Boost_NO_BOOST_CMAKE TRUE) # to fix the problem of finding python37 libs
 SET(Boost_USE_STATIC_LIBS=OFF)
 SET(Boost_USE_MULTITHREADED=OFF)
 SET(Boost_USE_STATIC_RUNTIME=OFF)
 
-# Adapt it according to your system
-#FIND_PACKAGE(Boost 1.73.0 REQUIRED)
-FIND_PACKAGE(Boost 1.82.0 REQUIRED)
-#FIND_PACKAGE(Boost REQUIRED)
+FIND_PACKAGE(Boost 1.74.0 REQUIRED COMPONENTS regex python${LIBRA_Python3_VERSION})
 IF(Boost_FOUND)
-  MESSAGE("Success!")
-  INCLUDE_DIRECTORIES("${Boost_INCLUDE_DIRS}") 
-  # Adapt it based on your system
-  #FIND_PACKAGE(Boost COMPONENTS python36 regex) # it seems that it is important to find sub-packages too!!!
-  FIND_PACKAGE(Boost COMPONENTS python39 regex)
-  #FIND_PACKAGE(Boost COMPONENTS python37 regex)
-ELSEIF(NOT Boost_FOUND)
-  MESSAGE(FATAL_ERROR "Unable to find correct Boost version. Did you set BOOST_ROOT?")
+  INCLUDE_DIRECTORIES("${Boost_INCLUDE_DIRS}")
 ENDIF()
 
-MESSAGE("Found Boost libraries directory: ")
-MESSAGE("${Boost_LIBRARIES}")
-MESSAGE("Found Boost include directory: ")
-MESSAGE("${Boost_INCLUDE_DIRS}")
+MESSAGE(STATUS "Found Boost libraries directory: ${Boost_LIBRARIES}")
+MESSAGE(STATUS "Found Boost include directory:   ${Boost_INCLUDE_DIRS}")
 
 
-
+MESSAGE(STATUS "Looking for Eigen3 library...")
 FIND_PACKAGE(Eigen3)
 IF(EIGEN3_FOUND)
-  INCLUDE_DIRECTORIES("${EIGEN3_INCLUDE_DIR}")   
-  MESSAGE("Found Eigen3 include directory: ")
-  MESSAGE("${EIGEN3_INCLUDE_DIR}")
+  INCLUDE_DIRECTORIES("${EIGEN3_INCLUDE_DIR}")
+  SET(EIGEN3_INCLUDE_DIRS "${EIGEN3_INCLUDE_DIR}")
+  MESSAGE(STATUS "Found Eigen3 include directory: ${EIGEN3_INCLUDE_DIR}")
 ELSEIF(NOT EIGEN3_FOUND)
   MESSAGE(FATAL_ERROR "Unable to find Eigen3")
 ENDIF()
 
-
-SET(EIGEN3_INCLUDE_DIRS "${EIGEN3_INCLUDE_DIR}")
-
-# Remove CMakeCache.txt from the previous build, if you get an error finding libint2 due to problems 
-# in finding Eigen3
-
-# Libint2 2.7.0 CONFIG REQUIRED COMPONENTS shared gss e5 g5
-#FIND_PACKAGE(Libint2 MODULE 2.7.0)
-#find_package(Libint2)
+MESSAGE(STATUS "Looking for libint2 libraries...")
 FIND_PACKAGE(Libint2 CONFIG 2.7.1 REQUIRED COMPONENTS shared gss impure_sh onebody_d0_l6 g12_d0_l4 g12_d1_l4 eri_c4_d0_l5 eri_c4_d1_l4) #gss e5 g5)
-IF(Libint2_FOUND)
-  #INCLUDE_DIRECTORIES("${Libint2_INCLUDE_DIRS}")   
-  INCLUDE_DIRECTORIES(Libint2::int2 Libint2::cxx Libint2::int2-cxx Libint2::impure_sh Libint2::gss Libint2::onebody_d0_l6 Libint::g12_d0_l4 Libint2::g12_d1_l4 Libint2::shared Libint2::cxx_ho Libint2::c  Libint2::eri_c4_d0_l5  Libint2::eri_c4_d1_l4)   
-  MESSAGE("${LIBINT2_INCLUDE_DIR}")
-  MESSAGE("Found Libint2 include directory: ")
-  MESSAGE("${Libint2_INCLUDE_DIRS}")
-  MESSAGE("Found Libint2_LIBRARIES: ")
-  MESSAGE("${Libint2_LIBRARIES}")
-  MESSAGE("Found Libint2_LIBRARY: ")
-  MESSAGE("${Libint2_LIBRARY}")
-ELSEIF(NOT Libint2_FOUND)
-  MESSAGE(FATAL_ERROR "Unable to find correct libint2")
-ENDIF()
+if(Libint2_FOUND)
+  MESSAGE(STATUS "Found libint2 include directory: ${LIBINT2_INCLUDE_DIRS}")
+endif()
 
 
 #
@@ -139,18 +107,22 @@ ENDIF()
 #
 #  Cmake configuration
 #
-MESSAGE("Setting up the CMake configuration...")
+MESSAGE(STATUS "Setting up the CMake configuration...")
 IF(NOT CMAKE_BUILD_TYPE)
   SET(CMAKE_BUILD_TYPE "RELEASE")
-  SET(CMAKE_CXX_FLAGS "-fPIC -O2 -fpermissive -w -I ${Boost_INCLUDE_DIRS} -fopenmp")
 ENDIF()
+SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fPIC")
 
 
 
 #
 # Set the libraries
-# 
-SET( ext_libs ${Boost_LIBRARIES} ${PYTHON_LIBRARIES}) 
+#
+if(NOT WITH_OPENMP)
+  SET(ext_libs Boost::regex Boost::python${LIBRA_Python3_VERSION} Python3::Python)
+else()
+  SET(ext_libs Boost::regex Boost::python${LIBRA_Python3_VERSION} Python3::Python OpenMP::OpenMP_C OpenMP::OpenMP_CXX)
+endif()
 
 
 
